--- a/app/views/checkout/_form.html.haml
+++ b/app/views/checkout/_form.html.haml
@@ -71,6 +71,7 @@
                     - if !disabled
                       .span3.pull-right
                         - if @order.reservation_type.try(:step_checkout?)
+                          = render 'checkout/draft_buttons', order: @order
                           - if f.object.all_form_components.one?
                             %button.btn.blue.next{ data: { disable_with: t('general.processing') }}
                               = t('reservations_review.buttons.request')
@@ -78,6 +79,7 @@
                             %button.btn.blue.next{ data: { disable_with: t('general.processing') }}
                               = t('buy_sell_market.checkout.buttons.continue')
                         - elsif f.object.all_form_components.size == index + 1
+                          = render 'checkout/draft_buttons', order: @order
                           %button.btn.blue.next{ data: { disable_with: t('general.processing') }}
                             = t('reservations_review.buttons.request')
 
