--- a/lib/tasks/volte/liquid_views/layouts--theme_header.liquid
+++ b/lib/tasks/volte/liquid_views/layouts--theme_header.liquid
@@ -1,7 +1,7 @@
 <header class="masthead">
     <div class="wrapper-a">
         <div class="topnav">
-            <a class="logo" href="./"><img alt="The Volte" src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/attachment_file/data/2773/volte-logo.svg" /></a>
+            <a class="logo" href="/"><img alt="The Volte" src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/attachment_file/data/2773/volte-logo.svg" /></a>
             <nav role="nav">
                 <button class="topnav-toggle animated zoomIn">☰</button>
                 {% if current_user == blank %}
